[package]
name = "nitride"
version = "0.1.0"
authors = ["Xithrius <xithrius@gmail.com>"]
edition = "2021"
rust-version = "1.61.0"
description = "Compounding package managers together."
documentation = "https://github.com/Xithrius/nitride"
homepage = "https://github.com/Xithrius/nitride"
repository = "https://github.com/Xithrius/nitride"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0.19", features = [ "derive", "cargo" ] }

[[bin]]
bench = false
path = "src/main.rs"
name = "nitride"

[profile.dev]
lto = "off"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = "thin"
debug = 1
incremental = true
